--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Pixel Bubble Dodge - By Miraz</title>
+    <title> আব্বাসকে বাচাও - By Miraz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,4 +30,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
