--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title> আব্বাসকে বাচাও - By Miraz</title>
+    <title> Dhaka 8 - By Miraz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -32,3 +32,4 @@
 </body>
 
 </html>
+
