--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="ui">
             <div class="candidate-left"><span class="name">মির্জা আব্বাস</span><br>ভোট: <span id="leftScore">0</span></div>
             <div id="timer">60s</div>
-            <div class="candidate-right"><span class="name">নাসিরউদ্দিন পাটোয়ারী</span><br>ভোট: <span id="rightScore">0</span></div>
+            <div class="candidate-right"><span class="name">নাসিরউদ্দিন</span><br>ভোট: <span id="rightScore">0</span></div>
         </div>
 
         <div id="startScreen" class="overlay">
