--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Election Game Pro - By Miraz</title>
+    <title> Dhaka 8 - By Miraz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -49,3 +49,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
